<resources>
    <string name="app_name">Meat Circle</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="show_pwd">show_pwd</string>


    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_by_category">Shop by Category</string>


</resources>
