<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registered_emailid"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/Black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_emailid"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginStart="3dp"
                android:elevation="0dp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginEnd="3dp"
                android:elevation="0dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>