<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="20dp">


   <ImageView
       android:id="@+id/logo_image"
       android:layout_width="wrap_content"
       android:layout_height="150dp"
       android:src="@drawable/logo"
       android:layout_marginTop="20dp"
       android:transitionName="logo_image"/>

   <TextView
       android:id="@+id/logo_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textStyle="bold|italic"
       android:fontFamily="sans-serif-black"
       android:text="Welcome To Meat Corner"
       android:textAlignment="center"
       android:textSize="34sp"
       android:transitionName="logo_text"
       android:textColor="@color/Black"/>

   <TextView
      android:id="@+id/slogan_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Sign In to continue "
       android:textSize="18sp"
       android:layout_marginTop="10dp"
       android:transitionName="logo_desc"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="20dp"
       android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/username"
          android:hint="Username"
          android:transitionName="username_tran"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/password"
          android:hint="Password"
          android:layout_marginTop="15dp"
          app:passwordToggleEnabled="true"
          android:transitionName="password_tran"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword" />

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:background="#00000000"
          android:elevation="0dp"
          android:text="@string/forgot_password" />

      <Button
          android:id="@+id/login_btn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/login"
          android:textSize="18sp"
          android:background="@color/colorAccent"
          android:textColor="@color/colorWhite"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"
          android:transitionName="button_tran"/>

      <Button
          android:id="@+id/signUp_screen"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:layout_margin = "5dp"
          android:background="#00000000"
          android:elevation="0dp"
          android:text="@string/newUser"
          android:textColor="@color/Black"
          android:transitionName="login_signup_tran"/>


   </LinearLayout>



</LinearLayout>